maybe fixed iphone image stretch
replaced some siema images with static images. Tweaked some css of Siema2, but I can't see it it works until after push.

--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -982,7 +982,7 @@ nav {
     margin: 0 auto -4px auto;
 }
 
-.siema2 img, .siema1 img, .siema4 img {
+.siema1 img, .siema4 img {
     width: 90%;
     height: fit-content;
     margin: 20px auto;
@@ -991,11 +991,30 @@ nav {
     display: block;
 }
 
+.image_project img{
+    border-radius: 7px;
+    margin: 20px auto;
+    max-height: 500px;
+    width: auto;
+    max-width: 100%;
+    display:block;
+    box-shadow: 0px 0px 15px 0px #00000040;
+
+}
+
 /* Added because of broken iOS */
 .siema2 img {
-    max-height: 500px;
+    /* max-height: 500px; */
     /* width: fit-content; */
-    max-width: 100%;
+    /* max-width: 100%; */
+
+    width: 90%;
+    height: auto;
+    /* max-height: fit-content; */
+    margin: 20px auto;
+    box-shadow: 0px 0px 15px 0px #00000040;
+    border-radius: 7px;
+    display: block;
 }
 
 .siema3 img{
@@ -1543,6 +1562,10 @@ and (-webkit-device-pixel-ratio: 3) {
 
     .siema1 img{
         max-height: 500px;
+    }
+
+    .image_project img {
+        box-shadow: none;
     }
 }
 
